--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 		<link rel="icon" href="Icon.ico" type="image/x-icon" />
 		<style>
 			body{
-				background-color: #eee;
+				background-color: #fff;
+				font-family: "Microsoft Yahei","PingFang SC",Sans-Serif;
 			}
 			canvas{
-				background-color: #eee;
+				background-color: #fff;
 				z-index: -1;
 				position : absolute;
 				left: 0;
@@ -31,7 +32,8 @@
 	</head>
 	<body style="margin: 0 auto">
 		<canvas id="canv"></canvas>
-
+		<h1 class="title" align="center">It's a fate that we meet here</h1>
+		<h2 class="title2" align="center">相逢即是有缘人</h2>
 		<script type="text/javascript">
 			var canvas=document.getElementById("canv");
 			var wid=window.innerWidth;
