--- a/index.html
+++ b/index.html
@@ -27,13 +27,23 @@
 			.title2{font-size:45px}
 			.title3{font-size:30px}
 			.texts{font-size:20px;width:1000px;margin:0 auto}
-			.textt{font-size:15px;width:800px;margin:0 auto}
 		</style>
 	</head>
 	<body style="margin: 0 auto">
 		<canvas id="canv"></canvas>
 		<h1 class="title" align="center">It's a fate that we meet here</h1>
 		<h2 class="title2" align="center">相逢即是有缘人</h2>
+		<br>
+		<h3 class="title3" align="center">About myself</h3>
+		<p align="center"><img src="Icon.ico" width="256" height="256"/></p>
+		<p class="texts" align="center">
+			I am Natsu Kinmoe, a girl that loves programming.<br>
+			Program in macOS, compile in Windows, mainly serve for Chinese people, but UI in English.<br>
+			That is me, a friendly girl with a little strange.<br>
+			我叫夏欣萌，是一个热爱编程的女孩。<br>
+			在macOS中编程但是在Windows中编译，为中国人服务但是用英文的UI。<br>
+			这就是我，一个热心又不失奇怪的女孩。<br>
+		</p>
 		<script type="text/javascript">
 			var canvas=document.getElementById("canv");
 			var wid=window.innerWidth;
@@ -93,7 +103,6 @@
 					$.fill();
 				}
 				requestAnimationFrame(step);
-				//document.body.style.background="url('"+canvas.toDataURL()+"')";
 			}
 			requestAnimationFrame(step);
 		</script>
