--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<h2 class="title2" align="center">相逢即是有缘人</h2>
 		<br>
 		<h3 class="title3" align="center">About myself</h3>
-		<p align="center"><img src="girl.png" width="256" height="256"/></p>
+		<p align="center"><img src="girl.jpg" width="256" height="256"/></p>
 		<p class="texts" align="center">
 			I am Natsu Kinmoe, a girl that loves programming.<br>
 			Program in macOS, compile in Windows, mainly serve for Chinese people, but UI in English.<br>
