--- a/index.html
+++ b/index.html
@@ -41,8 +41,15 @@
 			Program in macOS, compile in Windows, mainly serve for Chinese people, but UI in English.<br>
 			That is me, a friendly girl with a little strange.<br>
 			我叫夏欣萌，是一个热爱编程的女孩。<br>
-			在macOS中编程但是在Windows中编译，为中国人服务但是用英文的UI。<br>
+			在macOS中编程但是在Windows中编译，为中国人服务但是写着英文的UI。<br>
 			这就是我，一个热心又不失奇怪的女孩。<br>
+		</p>
+		<br>
+		<h3 class="title3" align="center">My programs</h3>
+		<p class="texts" align="center">
+			Natsubf
+			<br><br>
+			Molecular Weight Calculator
 		</p>
 		<script type="text/javascript">
 			var canvas=document.getElementById("canv");
