--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<br>
 		<h3 class="title3" align="center">My programs</h3>
 		<p class="texts" align="center">
-			Natsubf Brainfuck Runner and Debugger
+			<a href="softwares/natsubf">Natsubf Brainfuck Runner and Debugger</a>
 			<br><br>
 			Molecular Weight Calculator
 		</p>
