--- a/index.html
+++ b/index.html
@@ -47,11 +47,37 @@
 		<br>
 		<h3 class="title3" align="center">My programs</h3>
 		<p class="texts" align="center">
-			<a href="softwares/natsubf">Natsubf Brainfuck Runner and Debugger</a>
+			<a href="softwares/natsubf">Natsubf Brainfuck Runner and Debugger<br>Natsubf Brainfuck运行与调试工具</a>
 			<br><br>
-			Molecular Weight Calculator
+			Molecular Weight Calculator<br>相对分子质量计算器
 		</p>
-		<script type="text/javascript" src="scripts/background.js">
-		</script>
+		<br>
+		<h3 class="title3" align="center"><a href="https://github.com/natsukmoe" style="color:#000; text-shadow:0px 0px 2px rgba(255,10,10,1), 0px 0px 7px rgba(255,10,10,1), 0px 0px 11px rgba(246,135,235,1);">My GitHub</a></h3>
+		<p class="texts" align="center">
+			Welcome to my GitHub! You can find all my repos there!<br>
+			You can download releases, create issues and see my source code there.<br>
+			We welcome you to use part of my source code in your program, but please credit me in your program like "This part of source code is from natsukmoe (https://github.com/natsukmoe)".<br>
+			欢迎来到我的GitHub！您可以在这里找到我所有的项目！<br>
+			您可以下载最新版的软件、提出问题或者查看我的源代码。<br>
+			同时也欢迎您在您的程序中使用一部分我的代码，但是不要忘记在程序中写上这句话：“这部分代码来源于natsukmoe（https://github.com/natsukmoe）”。
+		</p>
+		<br>
+		<h3 class="title3" align="center">About this page</h3>
+		<p class="texts" align="center">
+			Design: Natsu Kinmoe<br>
+			Background: Natsu Kinmoe<br>
+			Scripts: Natsu Kinmoe<br>
+			Main Website: Natsu Kinmoe<br>
+			Chinese Translate: Natsu Kinmoe<br>
+			If you want to cooperate with me, please email me at <a href="mailto:natsukmoe@126.com">natsukmoe@126.com</a><br>
+			设计: Natsu Kinmoe<br>
+			背景: Natsu Kinmoe<br>
+			JS脚本: Natsu Kinmoe<br>
+			网页: Natsu Kinmoe<br>
+			英语翻译：Natsu Kinmoe<br>
+			若需要合作，请发邮箱：<a href="mailto:natsukmoe@126.com">natsukmoe@126.com</a>。
+		</p>
+		<br><br>
+		<script type="text/javascript" src="scripts/background.js"></script>
 	</body>
 </html>
