--- a/softwares/natsubf/index.html
+++ b/softwares/natsubf/index.html
@@ -36,7 +36,8 @@
 		<br>
 		<h3 class="title3" align="center">About Brainfuck</h3>
 		<p class="texts">
-			For users outside China, please read <a href="https://esolangs.org/wiki/Brainfuck">https://esolangs.org/wiki/Brainfuck</a>. This is the full document of Brainfuck.<br><br>
+			For users outside China, please read <a href="https://esolangs.org/wiki/Brainfuck">https://esolangs.org/wiki/Brainfuck</a>. This is the full document of Brainfuck.<br>
+			<a href="https://github.com/natsukmoe/some-bf-programs">Here</a> is some of my brainfuck programs.<br><br>
 			对于中国用户，Esolang不太好使，就在这里简单说明一下了。<br>
 			Brainfuck运行时会开一个大小为30000的byte数组，同时有一个指针，初始的时候指着位置0，有8种标识符：<br>
 			+ 将当前指针指向的位置加1<br>
@@ -46,7 +47,18 @@
 			, 读入一个字符，并将这个字符的<a href="https://baike.baidu.com/item/ASCII/309296">ASCII码</a>存储到当前指针指向的位置<br>
 			. 输出当前指针指向位置的<a href="https://baike.baidu.com/item/ASCII/309296">ASCII码</a>对应的字符<br>
 			[ 若当前指针指向位置的值不为0，开始循环<br>
-			] 若当前指针指向位置的值为0，则结束循环，否则回到对应的 [ 位置
+			] 若当前指针指向位置的值为0，则结束循环，否则回到对应的 [ 位置。<br>
+			Brainfuck并不是一个正经的编程语言，但是由于brainfuck奇特的语法，可以将其看成是一个训练智商的工具。<br>
+			<a href="https://github.com/natsukmoe/some-bf-programs">这里</a>是我的一些brainfuck程序，里面有比较详细的注释。
+		</p>
+		<br><br>
+		<h3 class="title3" align="center">What's Natsubf</h3>
+		<p class="texts">
+			If you want to only RUN brainfuck programs, Natsubf is not nessesary. But if you want to make some large brainfuck programs, you can't avoid debugging, then natsubf is your best choice.<br>
+			There is a Command Line UI debugger inside natsubf. In this debugger, you can make breakpoints, run to breakpoints and watch the memory (see the picture below).
+			<img src="jietu1.jpg" width="1000" height="684"/>
+			如果你只需要运行brainfuck程序，那么你并不需要一个Natsubf，但是在编写大型brainfuck程序的时候，难免会遇到要调试的情况，此时Natsubf就是你最好的选择。<br>
+			Natsubf内置一个终端用户界面调试器，在那里，你可以添加断点、运行到断点并且查看内存（见上图）。
 		</p>
 		<script type="text/javascript" src="../../scripts/background.js"></script>
 	</body>
