--- a/softwares/natsubf/index.html
+++ b/softwares/natsubf/index.html
@@ -51,15 +51,23 @@
 			Brainfuck并不是一个正经的编程语言，但是由于brainfuck奇特的语法，可以将其看成是一个训练智商的工具。<br>
 			<a href="https://github.com/natsukmoe/some-bf-programs">这里</a>是我的一些brainfuck程序，里面有比较详细的注释。
 		</p>
-		<br><br>
+		<br>
 		<h3 class="title3" align="center">What's Natsubf</h3>
 		<p class="texts">
 			If you want to only RUN brainfuck programs, Natsubf is not nessesary. But if you want to make some large brainfuck programs, you can't avoid debugging, then natsubf is your best choice.<br>
 			There is a Command Line UI debugger inside natsubf. In this debugger, you can make breakpoints, run to breakpoints and watch the memory (see the picture below).
 			<img src="jietu1.jpg" width="1000" height="684"/>
 			如果你只需要运行brainfuck程序，那么你并不需要一个Natsubf，但是在编写大型brainfuck程序的时候，难免会遇到要调试的情况，此时Natsubf就是你最好的选择。<br>
-			Natsubf内置一个终端用户界面调试器，在那里，你可以添加断点、运行到断点并且查看内存（见上图）。
+			Natsubf内置一个终端用户界面调试器，在那里，你可以添加断点、运行到断点并且查看内存（见上图）。<br><br>
+			Of course, there are more functions inside Natsubf. It not only contains a runner and debugger, but also contains a interactor. If you want to test something, you can use the interactor. You can reset the state and try again easily if the test is failed.<br>
+			当然，Natsubf中除了运行和调试以外还有更多功能。它内置了一个交互程序，当你想要测试一段代码是否能够正常运行的时候，你可以用交互程序。而如果测试失败，也不必担心，你可以轻松地将状态复位，然后进行下一次测试。
 		</p>
+		<br>
+		<h3 class="title3" align="center"><a href="https://github.com/natsukmoe/natsubf" style="color:#000; text-shadow:0px 0px 2px rgba(255,10,10,1), 0px 0px 7px rgba(255,10,10,1), 0px 0px 11px rgba(246,135,235,1);">See the repo</a> and <a href="https://github.com/natsukmoe/natsubf/releases" style="color:#000; text-shadow:0px 0px 2px rgba(10,255,10,1), 0px 0px 7px rgba(10,255,10,1), 0px 0px 11px rgba(246,135,235,1);">download releases</a></h3>
+		<p class="texts">
+			This program supports to run in Windows and macOS. Please download the zip and extract ALL files in it to a PATH folder (like C:\Users\System32 in Windows and /usr/local/bin in macOS).<br>
+			程序有Windows版本和macOS版本，请下载对应版本后，将压缩包中所有的文件放置到一个PATH文件夹中（如Windows中的C:\Users\System32和macOS中的/usr/local/bin）。
+		</p><br><br>
 		<script type="text/javascript" src="../../scripts/background.js"></script>
 	</body>
 </html>
