--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			JS脚本: Natsu Kinmoe<br>
 			网页: Natsu Kinmoe<br>
 			英语翻译：Natsu Kinmoe<br>
-			若需要合作，请发邮箱：<a href="mailto:natsukmoe@126.com">natsukmoe@126.com</a>。
+			若需要合作，请发邮件至：<a href="mailto:natsukmoe@126.com">natsukmoe@126.com</a>。
 		</p>
 		<br><br>
 		<script type="text/javascript" src="scripts/background.js"></script>
