--- a/softwares/natsubf/index.html
+++ b/softwares/natsubf/index.html
@@ -65,8 +65,8 @@
 		<br>
 		<h3 class="title3" align="center"><a href="https://github.com/natsukmoe/natsubf" style="color:#000; text-shadow:0px 0px 2px rgba(255,10,10,1), 0px 0px 7px rgba(255,10,10,1), 0px 0px 11px rgba(246,135,235,1);">See the repo</a> and <a href="https://github.com/natsukmoe/natsubf/releases" style="color:#000; text-shadow:0px 0px 2px rgba(10,255,10,1), 0px 0px 7px rgba(10,255,10,1), 0px 0px 11px rgba(246,135,235,1);">download releases</a></h3>
 		<p class="texts">
-			This program supports to run in Windows and macOS. Please download the zip and extract ALL files in it to a PATH folder (like C:\Users\System32 in Windows and /usr/local/bin in macOS).<br>
-			程序有Windows版本和macOS版本，请下载对应版本后，将压缩包中所有的文件放置到一个PATH文件夹中（如Windows中的C:\Users\System32和macOS中的/usr/local/bin）。
+			This program supports to run in Windows and macOS. Please download the zip and extract ALL files in it to a PATH folder (like C:\Users\System32 in Windows and /usr/local/bin in macOS). Then type 'natsubf' in the terminal to read the usage.<br>
+			程序有Windows版本和macOS版本，请下载对应版本后，将压缩包中所有的文件放置到一个PATH文件夹中（如Windows中的C:\Users\System32和macOS中的/usr/local/bin），然后在终端中输入“natsubf”查看使用说明。
 		</p><br><br>
 		<script type="text/javascript" src="../../scripts/background.js"></script>
 	</body>
