--- a/softwares/natsubf/index.html
+++ b/softwares/natsubf/index.html
@@ -37,7 +37,7 @@
 		<h3 class="title3" align="center">About Brainfuck</h3>
 		<p class="texts">
 			For users outside China, please read <a href="https://esolangs.org/wiki/Brainfuck">https://esolangs.org/wiki/Brainfuck</a>. This is the full document of Brainfuck.<br>
-			<a href="https://github.com/natsukmoe/some-bf-programs">Here</a> is some of my brainfuck programs.<br><br>
+			<a href="https://github.com/natsukmoe/some-bf-programs">Here</a> are some of my brainfuck programs.<br><br>
 			对于中国用户，Esolang不太好使，就在这里简单说明一下了。<br>
 			Brainfuck运行时会开一个大小为30000的byte数组，同时有一个指针，初始的时候指着位置0，有8种标识符：<br>
 			+ 将当前指针指向的位置加1<br>
