--- a/softwares/natsubf/index.html
+++ b/softwares/natsubf/index.html
@@ -8,7 +8,7 @@
 		<meta http-equiv="Expires" content="0" />
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
-		<link rel="icon" href="Icon.ico" type="image/x-icon" />
+		<link rel="icon" href="../../Icon.ico" type="image/x-icon" />
 		<style>
 			body{
 				background-color: #fff;
