--- a/softwares/mwc/index.html
+++ b/softwares/mwc/index.html
@@ -31,6 +31,16 @@
 	</head>
 	<body style="margin: 0 auto">
 		<canvas id="canv"></canvas>
+		<h1 class="title" align="center">Molecular Weight Calculator</h1>
+		<h2 class="title2" align="center">相对分子质量计算器</h2>
+		<br>
+		<h3 class="title3" align="center">Above all</h3>
+		<p class="texts">
+			If you think you are good at chemistry, and you don't need this tool at all, please leave this page at once, thank you.<br>
+			This program is just for fun, but it is not for exams.<br>
+			如果你认为你的化学很好，不需要这个软件，请立即离开，谢谢。<br>
+			本程序仅供娱乐，请勿过度依赖，以免影响你的考试。
+		</p>
 		<script type="text/javascript" src="../../scripts/background.js"></script>
 	</body>
 </html>
