--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<p class="texts" align="center">
 			<a href="softwares/natsubf">Natsubf Brainfuck Runner and Debugger<br>Natsubf Brainfuck运行与调试工具</a>
 			<br><br>
-			Molecular Weight Calculator<br>相对分子质量计算器
+			<a href="softwares/mwc">Molecular Weight Calculator<br>相对分子质量计算器</a>
 		</p>
 		<br>
 		<h3 class="title3" align="center"><a href="https://github.com/natsukmoe" style="color:#000; text-shadow:0px 0px 2px rgba(255,10,10,1), 0px 0px 7px rgba(255,10,10,1), 0px 0px 11px rgba(246,135,235,1);">My GitHub</a></h3>
