--- a/softwares/mwc/index.html
+++ b/softwares/mwc/index.html
@@ -41,6 +41,23 @@
 			如果你认为你的化学很好，不需要这个软件，请立即离开，谢谢。<br>
 			本程序仅供娱乐，请勿过度依赖，以免影响你的考试。
 		</p>
+		<br>
+		<h3 class="title3" align="center">Introduction</h3>
+		<p class="texts">
+			If you are a middle school student, you must be worried about chemistry, like me. (Be quiet! Don't let my chemistry teacher hear it!)<br>
+			You also must be worried about the calculation problems in the chemistry exams. The annoying chemical equation, the annoying molecular weight and the annoying format.<br>
+			So this program is made to calculate the relative molecular weight, for most of the middle school students like me. I hope you will enjoy using the program.<br><br>
+			如果你是一个中学生，你一定很担心你的化学成绩，像我一样。（小声点，别被我的化学老师听见了！）<br>
+			你一定也很担心你的试卷中的计算题。那令人头疼的化学方程式、令人头疼的相对分子质量和令人头疼的死板格式。<br>
+			所以为了大部分像我一样的中学生，我制作了这个计算相对分子质量的程序。希望大家使用愉快。<br>
+			<img src="shotcut.jpg" width="1000" height="600"/>
+		</p>
+		<br>
+		<h3 class="title3" align="center">Student Mode</h3>
+		<p class="texts">
+			In the periodic table, some of the relative atomic mass is not an integer, like Cu is 63.6, but you will find an integer relative atomic mass in your examination paper, like 64. So I made a Student Mode to solve this problem. The result in student mode ignores most of the decimal parts.<br>
+			针对试卷上相对原子质量与元素周期表中的有误差的情况，我制作了一个“学生模式”，它省略了大部分元素相对原子质量的小数部分，以符合各大考试卷的标准。
+		</p>
 		<script type="text/javascript" src="../../scripts/background.js"></script>
 	</body>
 </html>
