--- a/softwares/natsubf/index.html
+++ b/softwares/natsubf/index.html
@@ -60,7 +60,9 @@
 			如果你只需要运行brainfuck程序，那么你并不需要一个Natsubf，但是在编写大型brainfuck程序的时候，难免会遇到要调试的情况，此时Natsubf就是你最好的选择。<br>
 			Natsubf内置一个终端用户界面调试器，在那里，你可以添加断点、运行到断点并且查看内存（见上图）。<br><br>
 			Of course, there are more functions inside Natsubf. It not only contains a runner and debugger, but also contains a interactor. If you want to test something, you can use the interactor. You can reset the state and try again easily if the test is failed.<br>
-			当然，Natsubf中除了运行和调试以外还有更多功能。它内置了一个交互程序，当你想要测试一段代码是否能够正常运行的时候，你可以用交互程序。而如果测试失败，也不必担心，你可以轻松地将状态复位，然后进行下一次测试。
+			当然，Natsubf中除了运行和调试以外还有更多功能。它内置了一个交互程序，当你想要测试一段代码是否能够正常运行的时候，你可以用交互程序。而如果测试失败，也不必担心，你可以轻松地将状态复位，然后进行下一次测试。<br><br>
+			For some large brainfuck programs, you can also use natsubf's optimize function. It can optimize a large program to a small program and execute in a faster speed.<br>
+			对于一些大型brainfuck程序，你可以用natsubf中的优化功能。它可以将一个大型的程序优化成一个较小的程序，并且以更快的速度运行。
 		</p>
 		<br>
 		<h3 class="title3" align="center"><a href="https://github.com/natsukmoe/natsubf" style="color:#000; text-shadow:0px 0px 2px rgba(255,10,10,1), 0px 0px 7px rgba(255,10,10,1), 0px 0px 11px rgba(246,135,235,1);">See the repo</a> and <a href="https://github.com/natsukmoe/natsubf/releases" style="color:#000; text-shadow:0px 0px 2px rgba(10,255,10,1), 0px 0px 7px rgba(10,255,10,1), 0px 0px 11px rgba(246,135,235,1);">download releases</a></h3>
