--- a/softwares/dayscnt/index.html
+++ b/softwares/dayscnt/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Molecular Weight Calculator</title>
+		<title>Days Counter</title>
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Cache-Control" content="no-cache" />
 		<meta http-equiv="Expires" content="0" />
@@ -41,6 +41,15 @@
 			乃时光不可倒流，回忆终将仍为回忆，只偶然于脑海浮现，而若忘之，则无也。期望者，前行之动力也，人无期望，则如鸟无虫、牛无草、蜂无花者，凄也。故回忆与期望，均不可忘之。<br>
 			此乃随笔，文采稍逊，一笑而已。<br>
 			(This is too difficult for me to write it down in English, and it is not so important.)
+		</p>
+		<br>
+		<h3 class="title3" align="center">Introduction</h3>
+		<p class="texts">
+			此程序会对一些即将到来的重要事件进行倒计时，对一些已经过去的事件进行正计时。<br>
+			同时，程序支持循环功能，若您想要倒计时至一个节日（或生日），您不必每年都重新修改一遍事件，只需要将事件设置为按年循环即可。程序支持三种循环模式：按秒循环、按日循环、按年循环。<br>
+			如果计划有变，您可以修改一个事件，而不必重新创建事件。如果计划取消，您可以删除事件。如果计划新增，您可以增加事件。此乃最基础之功能也。<br>
+			程序运行截图：<br>
+			<img src="shotcut.jpg" width="1000" height="600"/>
 		</p>
 		<br>
 		<h3 class="title3" align="center"><a href="https://github.com/natsukmoe/days-counter" style="color:#000; text-shadow:0px 0px 2px rgba(255,10,10,1), 0px 0px 7px rgba(255,10,10,1), 0px 0px 11px rgba(246,135,235,1);">See the repo</a> and <a href="https://github.com/natsukmoe/days-counter/releases" style="color:#000; text-shadow:0px 0px 2px rgba(10,255,10,1), 0px 0px 7px rgba(10,255,10,1), 0px 0px 11px rgba(246,135,235,1);">download releases</a></h3>
