--- a/softwares/dayscnt/index.html
+++ b/softwares/dayscnt/index.html
@@ -45,9 +45,13 @@
 		<br>
 		<h3 class="title3" align="center">Introduction</h3>
 		<p class="texts">
+			This program can count the days to some future events, and count the days after some past events.<br>
+			Also, the program supports loop, that you needn't edit the event once a year if you want to count the days to some festivals or your birthday. You just need to set the event loop to loop once a year.<br>
+			If you want to change the date to some events, you can edit them. If you want to cancel some events, you can delete them. If you have some new events, you can add them. This is the basic part of the program.<br><br>
 			此程序会对一些即将到来的重要事件进行倒计时，对一些已经过去的事件进行正计时。<br>
 			同时，程序支持循环功能，若您想要倒计时至一个节日（或生日），您不必每年都重新修改一遍事件，只需要将事件设置为按年循环即可。程序支持三种循环模式：按秒循环、按日循环、按年循环。<br>
-			如果计划有变，您可以修改一个事件，而不必重新创建事件。如果计划取消，您可以删除事件。如果计划新增，您可以增加事件。此乃最基础之功能也。<br>
+			如果计划有变，您可以修改一个事件，而不必重新创建事件。如果计划取消，您可以删除事件。如果计划新增，您可以增加事件。此乃最基础之功能也。<br><br>
+			Program shotcut:<br>
 			程序运行截图：<br>
 			<img src="shotcut.jpg" width="1000" height="600"/>
 		</p>
